# Shivli_Dimri

FINAL TASK/RELEVANT FILES/: README.txt  areaurdf_noarea1.urdf  ball_positions.py  differential_drive_robot.gazebo  parser.cpp
FINAL TASK/areaurdf_noarea1/: CMakeLists.txt
FINAL TASK/areaurdf_noarea1/launch/: display.launch  gazebo.launch  world.launch
FINAL TASK/areaurdf_noarea1/meshes/: base_link.STL  l1.STL  l10.STL  l11.STL  l2.STL  l3.STL  l4.STL  l6.STL  l7.STL  l8.STL  l9.STL
FINAL TASK/areaurdf_noarea1/src/: parser.cpp
FINAL TASK/areaurdf_noarea1/urdf/: areaurdf_noarea1.csv  gamefield.sdf  gamefieldwithboundary.sdf
FINAL TASK/differential_drive_robot_control/onlynodes/: ball_detector.py
FINAL TASK/differential_drive_robot_description/launch/: rviz_visualize.launch
FINAL TASK/differential_drive_robot_description/urdf/: differential_drive_robot.xacro
FINAL TASK/differential_drive_robot_gazebo/: CMakeLists.txt
FINAL TASK/differential_drive_robot_gazebo/launch/: differential_drive_robot_rviz_gazebo.launch
FINAL TASK/differential_drive_robot_gazebo/world/: world.world
Task1/: Q10  Q11  Q12  Q13.withoutrecurssion  Q13.withrecurrsion  Q14  Q15  Q2  Q3  Q4  Q5  Q5.amicable numbers  Q7  Q8  Q8.matrixmul  Q8.transpose
Task2/: GIT HUB.docx  Q1  Q10  Q13.py  Q2  Q3  Q4  Q5  Q6  Q7  Q8  Q9
final task/: package.xml
linear_reg.ipynb/: 6s.ipynb  log.reg.ipynb
task3/: log.reg.ipynb
task4/: dectrees35.ipynb  kmeans.ipynb  regtree.ipynb
task5/: orange_basketball.py
