<package format="2">
  <name>areaurdf_noarea1</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for areaurdf_noarea1</p>
    <p>This package contains configuration data, 3D models and launch files for areaurdf_noarea1 robot</p>
  </description>
  <author>Your Name</author>
  <maintainer email="dimri116sd@gmail.com">Your Name</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
<build_depend>roscpp</build_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>rostopic</build_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>
